# SudokuX

./: CMakeLists.txt  backtracking.c  backtracking.h  files.c  files.h  main.c
algorithms/: helper.c  helper.h  hiddensingle.c  hiddensingle.h  intersectionremoval.c  intersectionremoval.h  nakedpairs.c  nakedpairs.h  xwing.c  xwing.h
data/: file.txt  sol.txt
